<resources>

    <string name="app_name">efridge</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="calendarTabStr">Calendar</string>
    <string name="myFridgeTabStr">My Fridge</string>
    <string name="settingTabStr">Setting</string>
    
    <string name="myFridgeHeaderStr">My Fridge</string>
    <string name="addFoodStr">Add</string>
    <string name="editFoodStr">Edit</string>
    
    <string name="delBtnStr">Del</string>
    <string name="saveBtnStr">Save</string>
    
    <string name="foodDescriptionLabelStr">Description</string>
    <string name="foodNameLabelStr">Food</string>
    <string name="expDateLabelStr">Expiry Date</string>
    
    <string name="foodImageContentDescriptionStr">Food Image</string>
</resources>