<?xml version="1.0" encoding="utf-8"?>
<!-- 

// aat issue #6 : 9/23/2012
// calendarActivity layout was created 

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/includeTabLayout"
        layout="@layout/tab_layout" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <Button
            android:id="@+id/addFoodBtn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/addFoodStr" />

        <TextView
            android:id="@+id/myFridgeHeader"
            android:layout_width="160dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/myFridgeHeaderStr"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/editFoodBtn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/editFoodStr" />

    </LinearLayout>

    <ListView
        android:id="@+id/foodsList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>