<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/includeTabLayout"
        layout="@layout/tab_layout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="280dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:background="#123fda"
            android:contentDescription="@string/foodImageContentDescriptionStr" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/foodExpLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/expDateLabelStr"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/foodexp_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="20dp"
            android:text="10th Oct, 2012" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/foodNameLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/foodNameLabelStr"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/foodName_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="20dp"
            android:text="chicken" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/foodDescriptionLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/foodDescriptionLabelStr"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/foodDescription_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="20dp"
            android:text="@string/foodNameLabelStr" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:scrollbars="horizontal" >

            <LinearLayout
                android:id="@+id/foodScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#abc123"
                android:gravity="center" >

                <!-- <Button
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:text="aaa" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:text="aaa" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:text="aaa" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:text="aaa" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:text="aaa" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="30dp"
                    android:text="aaa" /> -->
            </LinearLayout>
        </HorizontalScrollView>
    </RelativeLayout>

</LinearLayout>